--- a/novel.bib
+++ b/novel.bib
@@ -555,3 +555,12 @@ pages={503-528}
   publisher = {McGraw-Hill},
   address = {New York}
 }
+
+@article{FG67,
+  author={Farrar, Donald E and Glauber, Robert R},
+  year={1967},
+  title={Multicollinearity in regression analysis: the problem revisited},
+  publisher={JSTOR},
+  journal={The Review of Economic and Statistics},
+  pages={92--107}
+}
